// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuItem - current 1`] = `
.c3 {
  width: 24px;
  height: 24px;
  margin-right: 0.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: #C1C6CC;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c3 svg {
  height: 100%;
  width: 100%;
}

.c4 button .c1,
.c4 a .c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: grid;
  grid-gap: 0.75rem;
  grid-template-columns: 1fr;
}

.c4 .c2 {
  color: #C1C6CC;
  -webkit-transition: color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c4:hover .c2,
.c4[aria-current='true'] .c2 {
  color: #939BA5;
}

.c4[disabled]:hover .c2 {
  color: #C1C6CC;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #262D33;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  font-size: 0.875rem;
  font-weight: 400;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c0 button,
.c0 a {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border: none;
  color: inherit;
  cursor: pointer;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: inherit;
  font-weight: inherit;
  height: 40px;
  outline: none;
  padding: 0.5rem 1rem;
  position: relative;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 button:hover,
.c0 a:hover,
.c0 button:focus,
.c0 a:focus {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 button .c1,
.c0 a .c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: grid;
  grid-gap: 0.75rem;
  grid-template-columns: 24px 1fr;
}

.c0 .c2 {
  color: #C1C6CC;
  -webkit-transition: color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c0:hover,
.c0[aria-current='true'] {
  background: #F5F6F7;
  color: #262D33;
}

.c0:hover .c2,
.c0[aria-current='true'] .c2 {
  color: #939BA5;
}

.c0[aria-current='true'] {
  font-weight: 600;
}

.c0[disabled] {
  color: #939BA5;
}

.c0[disabled] button,
.c0[disabled] a {
  cursor: not-allowed;
}

.c0[disabled]:hover {
  background: #FFFFFF;
  color: #939BA5;
}

.c0[disabled]:hover .c2 {
  color: #C1C6CC;
}

<li
  aria-current="true"
  className="c0 "
  onBlur={[Function]}
  onClick={[Function]}
  onKeyUp={[Function]}
>
  <button
    role="menuitem"
  >
    <div
      className="c1 "
    >
      <div
        className="c2 c3"
      >
        <svg
          fill="currentColor"
          height="100%"
          viewBox="0 0 24 24"
          width="100%"
        >
          <title>
            Home
          </title>
          <path
            d="M12 5.69l5 4.5V18h-2v-6H9v6H7V10.19l5-4.5zM12 3L2 12h3v8h6v-6h2v6h6v-8h3L12 3z"
            fill="currentColor"
          />
        </svg>
      </div>
      <span>
        who!
      </span>
    </div>
  </button>
</li>
`;

exports[`MenuItem - detail 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #262D33;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  font-size: 0.875rem;
  font-weight: 400;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c0 button,
.c0 a {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border: none;
  color: inherit;
  cursor: pointer;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: inherit;
  font-weight: inherit;
  height: 40px;
  outline: none;
  padding: 0.5rem 1rem;
  position: relative;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 button:hover,
.c0 a:hover,
.c0 button:focus,
.c0 a:focus {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 button .c1,
.c0 a .c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: grid;
  grid-gap: 0.75rem;
  grid-template-columns: 1fr;
}

.c0 .c4 {
  color: #C1C6CC;
  -webkit-transition: color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c0:hover,
.c0[aria-current='true'] {
  background: #F5F6F7;
  color: #262D33;
}

.c0:hover .c4,
.c0[aria-current='true'] .c4 {
  color: #939BA5;
}

.c0[aria-current='true'] {
  font-weight: 600;
}

.c0[disabled] {
  color: #939BA5;
}

.c0[disabled] button,
.c0[disabled] a {
  cursor: not-allowed;
}

.c0[disabled]:hover {
  background: #FFFFFF;
  color: #939BA5;
}

.c0[disabled]:hover .c4 {
  color: #C1C6CC;
}

.c3 button .c1,
.c3 a .c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: grid;
  grid-gap: 0.75rem;
  grid-template-columns: 24px 1fr;
}

.c2 {
  color: #C1C6CC;
  margin-left: auto;
  margin-right: 1rem;
  padding-left: 1.25rem;
}

<li
  className="c0 "
  onBlur={[Function]}
  onClick={[Function]}
  onKeyUp={[Function]}
>
  <button
    role="menuitem"
  >
    <div
      className="c1 "
    >
      <span>
        who!
      </span>
    </div>
  </button>
  <div
    className="c2"
  >
    Is an excellent question
  </div>
</li>
`;

exports[`MenuItem - icon 1`] = `
.c3 {
  width: 24px;
  height: 24px;
  margin-right: 0.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: #C1C6CC;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c3 svg {
  height: 100%;
  width: 100%;
}

.c4 button .c1,
.c4 a .c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: grid;
  grid-gap: 0.75rem;
  grid-template-columns: 1fr;
}

.c4 .c2 {
  color: #C1C6CC;
  -webkit-transition: color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c4:hover .c2,
.c4[aria-current='true'] .c2 {
  color: #939BA5;
}

.c4[disabled]:hover .c2 {
  color: #C1C6CC;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #262D33;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  font-size: 0.875rem;
  font-weight: 400;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c0 button,
.c0 a {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border: none;
  color: inherit;
  cursor: pointer;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: inherit;
  font-weight: inherit;
  height: 40px;
  outline: none;
  padding: 0.5rem 1rem;
  position: relative;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 button:hover,
.c0 a:hover,
.c0 button:focus,
.c0 a:focus {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 button .c1,
.c0 a .c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: grid;
  grid-gap: 0.75rem;
  grid-template-columns: 24px 1fr;
}

.c0 .c2 {
  color: #C1C6CC;
  -webkit-transition: color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c0:hover,
.c0[aria-current='true'] {
  background: #F5F6F7;
  color: #262D33;
}

.c0:hover .c2,
.c0[aria-current='true'] .c2 {
  color: #939BA5;
}

.c0[aria-current='true'] {
  font-weight: 600;
}

.c0[disabled] {
  color: #939BA5;
}

.c0[disabled] button,
.c0[disabled] a {
  cursor: not-allowed;
}

.c0[disabled]:hover {
  background: #FFFFFF;
  color: #939BA5;
}

.c0[disabled]:hover .c2 {
  color: #C1C6CC;
}

<li
  className="c0 "
  onBlur={[Function]}
  onClick={[Function]}
  onKeyUp={[Function]}
>
  <button
    role="menuitem"
  >
    <div
      className="c1 "
    >
      <div
        className="c2 c3"
      >
        <svg
          fill="currentColor"
          height="100%"
          viewBox="0 0 24 24"
          width="100%"
        >
          <title>
            Beaker
          </title>
          <path
            d="M15.75 4.502a1.249 1.249 0 100-2.5 1.25 1.25 0 100 2.5zM12 5.752a1.25 1.25 0 10-.002-2.501A1.25 1.25 0 0012 5.753zm7.22 15.01c-1.254-2.415-3.47-7.511-3.47-7.511v-5h.625a.626.626 0 000-1.25h-7.5a.626.626 0 000 1.25H9.5v5s-2.168 5.276-3.393 7.633c-.58 1.118-.58 1.118.803 1.118h11.747c.56 0 1.21 0 .565-1.24h-.001zm-8.47-7.51v-5h3.75v5l.535 1.25h-4.793c.3-.733.508-1.25.508-1.25zm6.172 7.5h-8.33c-1.153 0-1.153 0-.67-.957.513-1.015 1.223-2.658 1.803-4.043h5.855c.59 1.338 1.3 2.917 1.814 3.935.536 1.064-.005 1.064-.471 1.064z"
            fill="currentColor"
          />
        </svg>
      </div>
      <span>
        who!
      </span>
    </div>
  </button>
</li>
`;

exports[`MenuItem 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #262D33;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  font-size: 0.875rem;
  font-weight: 400;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c0 button,
.c0 a {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border: none;
  color: inherit;
  cursor: pointer;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: inherit;
  font-weight: inherit;
  height: 40px;
  outline: none;
  padding: 0.5rem 1rem;
  position: relative;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 button:hover,
.c0 a:hover,
.c0 button:focus,
.c0 a:focus {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 button .c1,
.c0 a .c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: grid;
  grid-gap: 0.75rem;
  grid-template-columns: 1fr;
}

.c0 .c2 {
  color: #C1C6CC;
  -webkit-transition: color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c0:hover,
.c0[aria-current='true'] {
  background: #F5F6F7;
  color: #262D33;
}

.c0:hover .c2,
.c0[aria-current='true'] .c2 {
  color: #939BA5;
}

.c0[aria-current='true'] {
  font-weight: 600;
}

.c0[disabled] {
  color: #939BA5;
}

.c0[disabled] button,
.c0[disabled] a {
  cursor: not-allowed;
}

.c0[disabled]:hover {
  background: #FFFFFF;
  color: #939BA5;
}

.c0[disabled]:hover .c2 {
  color: #C1C6CC;
}

<li
  className="c0 "
  onBlur={[Function]}
  onClick={[Function]}
  onKeyUp={[Function]}
>
  <button
    role="menuitem"
  >
    <div
      className="c1 "
    >
      <span>
        who!
      </span>
    </div>
  </button>
</li>
`;
